platter-compiler-sveltejs/static/python/tests/syntax_programs/valid_tests/looping_valid.platter
start(){
  pass(a = 3; a -= 1; a > 0){  }
  pass(b = sum(); c -= 1; c > 0){  }
  pass(c; c += 1; c < 10){  }
  repeat(up){  }
  repeat(1 == (cake - 1)){  }
  repeat(isTrue()){  }
  order{
  } repeat(down);
  order {
  } repeat(2 < (bread - 5));
  order{
  } repeat(isCorrect());
}