platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_95.platter
start(){
  sip of c = (1 < 3 == 2);
}